@@ -1,4 +1,5 @@
 - Improvement: Person and ExecutionCourse senders name calculated dynamically
+- Improvement: StudentGroup now supports active Registrations for ExecutionYear
 
 24.1.1 (12-08-2019)
 - Improvement: On person creation, create physical address only when physical address data is not empty
